--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h1>Ganesh Terve</h1>
     <p>M.Sc. Computational Mechanics of Materials & Structures | FEA, LS-DYNA, Python</p>
     <p>Email: <a href="mailto:ganesh@example.com">ganesh@example.com</a> | 
-       LinkedIn: <a href="https://linkedin.com/in/ganesh">linkedin.com/in/ganesh</a> | 
+       LinkedIn: <a href="https://linkedin.com/in/ganesh">linkedin.com/in/ganesh-terve</a> | 
        GitHub: <a href="https://github.com/ganesh">github.com/ganesh</a>
     </p>
 </header>
@@ -134,3 +134,4 @@
 
 </body>
 </html>
+
